# ggg-rs

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  compatibility.html  contributing.html  environment.yml  index.html  installation.html  other_utils.html  post_processing.html  print.html  pyproject.toml  searchindex.js  setup_helpers.html  test.dump  toc.html  toc.js  update-checklist.md  write_public_netcdf.html
.github/workflows/: build-docs.yml  mdbook.yml  pypi.yml  rust.yml
.github/workflows-disabled/: build-docs.yml
book/: book.toml
book/src/: SUMMARY.md  compatibility.md  contributing.md  installation.md  other_utils.md  post_processing.md  setup_helpers.md  write_public_netcdf.md
book/src/other/: bin2nc.md  query_output.md  strip_header.md
book/src/postproc/: add_nc_flags.md  add_nc_flags_toml.md  apply_nc_fills.md  apply_tccon_airmass_correction.md  apply_tccon_insitu_correction.md  collate_tccon_results.md  write_public_netcdf.md
book/src/postproc/corrections/: airmass_correction_file.md  insitu_correction_file.md
book/src/postproc/write_public_netcdf/: aux_vars.md  comp_vars.md  configuration.md  debugging_tips.md  defaults.md  explicit_xgases.md  global_attributes.md  includes.md  site_metadata.md  xgas_discovery.md
book/src/setup/: change_ggg_files.md  list_spectra.md
book/src/write_public_netcdf/: gas_proper_names.md  xgas_discovery.md
other/: bin2nc.html  query_output.html  strip_header.html
postproc/: add_nc_flags.html  add_nc_flags_toml.html  apply_nc_fills.html  apply_tccon_airmass_correction.html  apply_tccon_insitu_correction.html  collate_tccon_results.html  write_public_netcdf.html
postproc/corrections/: airmass_correction_file.html  insitu_correction_file.html
postproc/write_public_netcdf/: aux_vars.html  comp_vars.html  configuration.html  debugging_tips.html  defaults.html  explicit_xgases.html  gas_proper_names.html  global_attributes.html  includes.html  site_metadata.html  xgas_discovery.html
setup/: change_ggg_files.html  list_spectra.html
src/: cit_spectrum_name.rs  collation.rs  error.rs  i2s.rs  interpolation.rs  lib.rs  logging.rs  nc_utils.rs  o2_dmf.rs  opus.rs  output_files.rs  runlogs.rs  test_utils.rs  units.rs  utils.rs
src/etc/: site_info.toml
src/opus/: constants.rs  mod.rs
src/python/: mod.rs  opus.rs
src/readers/: col_files.rs  mav_files.rs  mod.rs  postproc_files.rs  runlogs.rs
src/tccon/: input_config.rs  mod.rs  sort_spectra.rs
src/writers/: mod.rs  postproc_files.rs
test-data/: pa_ggg_benchmark.grl  pa_ggg_benchmark.vav.ada.aia  report_diffs.py
test-data/expected/apply-tccon-airmass-correction/: pa_ggg_benchmark.vsw.ada
test-data/expected/apply-tccon-airmass-correction-stable/: pa_ggg_benchmark.vsw.ada
test-data/expected/apply-tccon-insitu-correction/: pa_ggg_benchmark.vav.ada.aia
test-data/expected/apply-tccon-insitu-correction-stable/: pa_ggg_benchmark.vav.ada.aia
test-data/expected/collate-tccon-results/: pa_ggg_benchmark.tsw  pa_ggg_benchmark.vsw
test-data/expected/collate-tccon-results-stable/: pa_ggg_benchmark.tsw  pa_ggg_benchmark.vsw
test-data/fortran/: .gitignore
test-data/fortran/run_effective_path/: Makefile  run_effective_path.f
test-data/inputs/apply-tccon-airmass-correction/: pa_ggg_benchmark.vsw
test-data/inputs/apply-tccon-airmass-correction-stable/: pa_ggg_benchmark.vsw
test-data/inputs/apply-tccon-insitu-correction/: pa_ggg_benchmark.vav.ada
test-data/inputs/apply-tccon-insitu-correction-stable/: pa_ggg_benchmark.vav.ada
test-data/inputs/collate-tccon-results/: ch4_5938.pa_ggg_benchmark.col  ch4_6002.pa_ggg_benchmark.col  ch4_6076.pa_ggg_benchmark.col  co2_6220.pa_ggg_benchmark.col  co2_6339.pa_ggg_benchmark.col  co_4290.pa_ggg_benchmark.col  fco2_6154.pa_ggg_benchmark.col  h2o_4565.pa_ggg_benchmark.col  h2o_4570.pa_ggg_benchmark.col  h2o_4571.pa_ggg_benchmark.col  h2o_4576.pa_ggg_benchmark.col  h2o_4598.pa_ggg_benchmark.col  h2o_4611.pa_ggg_benchmark.col  h2o_4622.pa_ggg_benchmark.col  h2o_4631.pa_ggg_benchmark.col  h2o_4699.pa_ggg_benchmark.col  h2o_4734.pa_ggg_benchmark.col  h2o_4761.pa_ggg_benchmark.col  h2o_6076.pa_ggg_benchmark.col  h2o_6099.pa_ggg_benchmark.col  h2o_6125.pa_ggg_benchmark.col  h2o_6177.pa_ggg_benchmark.col  h2o_6255.pa_ggg_benchmark.col  h2o_6301.pa_ggg_benchmark.col  h2o_6392.pa_ggg_benchmark.col  h2o_6401.pa_ggg_benchmark.col  h2o_6469.pa_ggg_benchmark.col  hcl_5625.pa_ggg_benchmark.col  hcl_5687.pa_ggg_benchmark.col  hcl_5702.pa_ggg_benchmark.col  hcl_5735.pa_ggg_benchmark.col  hcl_5739.pa_ggg_benchmark.col  hdo_4054.pa_ggg_benchmark.col  hdo_4067.pa_ggg_benchmark.col  hdo_4116.pa_ggg_benchmark.col  hdo_4212.pa_ggg_benchmark.col  hdo_4232.pa_ggg_benchmark.col  hdo_6330.pa_ggg_benchmark.col  hdo_6377.pa_ggg_benchmark.col  hdo_6458.pa_ggg_benchmark.col  (+18 more)
test-data/inputs/test_utils/: fenced1.md  fenced2.md  fenced3.md
write_public_netcdf/: aux_vars.html  comp_vars.html  configuration.html  debugging_tips.html  defaults.html  explicit_xgases.html  gas_proper_names.html  xgas_discovery.html
