[package]
name = "ggg-rs"
version = "0.1.0"
edition = "2021"
# Use the newer feature resolving algorithm
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
chrono = "0.4.23"
clap = {version = "4", features = ["derive"]}
encoding = "0.2.33"
error-stack = "0.4.1"
fortformat = {git = "https://github.com/joshua-laughner/fortformat", features = ["serde"]}
itertools = "0.11.0"
ndarray = "0.15"
netcdf = {version = "0.8", optional=true}
num-traits = "0.2.16"
# Could move behind a feature
plotly = { version = "0.8.3", features = ["kaleido"], optional=true }
tabled = "0.15.0"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
rstest = "0.18.2"

[features]
default = ["dep:netcdf"]
netcdf = ["dep:netcdf"]
static = ["netcdf", "netcdf/static"]
plotting = ["dep:plotly"]

[lib]

[[bin]]
name = "bin2nc"
required-features = ["netcdf"]

[[bin]]
name = "list_spectra"

[[bin]]
name = "add-nc-flags"
required-features = ["netcdf"]

[[bin]]
name = "plot-spt"
required-features = ["plotting"]

[[bin]]
name = "i2s-setup"

[[bin]]
name = "strip-header"


#[[bin]]
#name = "plot_opus_spectra"
#required-features = ["plotting"]
