[package]
name = "ggg-rs"
version = "0.1.0"
edition = "2021"
# Use the newer feature resolving algorithm
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
chrono = "0.4.23"
clap = {version = "4", features = ["derive"]}
encoding = "0.2.33"
itertools = "0.11.0"
log = "0.4.20"
log4rs = "1.2.0"
error-stack = "0.4.1"
fortformat = {git = "https://github.com/joshua-laughner/fortformat", features = ["serde"]}
ndarray = "0.15"
netcdf = {version = "0.8", optional=true}
num-traits = "0.2.16"
pest = "2.7.5"
pest_derive = "2.7.5"
plotly = { version = "0.8.3", features = ["kaleido"], optional=true }
regex = "1.9.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
tabled = "0.15.0"
thiserror = "1.0.50"
toml = "0.8.8"

[dev-dependencies]
rstest = "0.18.2"

[features]
inprogress = []
netcdf = ["dep:netcdf"]
static = ["netcdf", "netcdf/static"]
plotting = ["dep:plotly"]

[lib]

[[bin]]
name = "bin2nc"
required-features = ["netcdf"]

[[bin]]
name = "collate_tccon_results"

[[bin]]
name = "list_spectra"

[[bin]]
name = "add_nc_flags"
required-features = ["netcdf"]

[[bin]]
name = "plot_spt"
required-features = ["plotting"]

[[bin]]
name = "query_output"

[[bin]]
name = "i2s_setup"

[[bin]]
name = "strip_header"

[[bin]]
name = "write_private_netcdf"
required-features = ["netcdf", "inprogress"]

[[bin]]
name = "write_public_netcdf"
required-features = ["netcdf", "inprogress"]

#[[bin]]
#name = "plot_opus_spectra"
#required-features = ["plotting"]
