[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ggg-rs"
version = "0.1.0"
description = "Rust programs for GGG"
requires-python = ">=3.8"

[tool.maturin]
# This tells maturin to look for a [[bin]] in Cargo.toml
bindings = "bin"
features = ["netcdf", "static"]
